force-app/main/default/objects/Org_Routing_Config__mdt/Org_Routing_Config__mdt.object-meta.xml
<CustomObject>
    <label>Org Routing Config</label>
    <pluralLabel>Org Routing Configs</pluralLabel>
    <description>Drives hub-spoke org routing in OrgTopologyService. Each record maps an SObject type to a Named Credential (target org) and the external ID field used for upsert matching. Add a record to onboard a new spoke without any code change.</description>
</CustomObject>