force-app/main/default/objects/Org_Routing_Config__mdt/fields/External_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Field__c</fullName>
    <label>External ID Field</label>
    <type>Text</type>
    <length>80</length>
    <description>API name of the external ID field used as the upsert key in the Composite SObject Collections API call to the target org.</description>
</CustomField>