force-app/main/default/objects/Org_Routing_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Deactivate to pause sync to this org without deleting the config record. OrgTopologyService filters to Is_Active__c = true only.</description>
</CustomField>