force-app/main/default/objects/Org_Routing_Config__mdt/fields/Is_Hub__c.field-meta.xml
<CustomField>
    <fullName>Is_Hub__c</fullName>
    <label>Is Hub</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True if this record represents the hub org (source of truth). Hub routes are excluded from broadcastToAllSpokes fan-out — the hub is the sender, not a target.</description>
</CustomField>