force-app/main/default/objects/Org_Routing_Config__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <type>Text</type>
    <length>80</length>
    <description>Developer name of the Named Credential that authenticates callouts to the target org. Format: callout:&lt;DeveloperName&gt;</description>
</CustomField>