force-app/main/default/objects/Org_Routing_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>80</length>
    <description>API name of the SObject this route handles (e.g. Account, Contact). Used by OrgTopologyService to select the correct route for a sync operation.</description>
</CustomField>