force-app/main/default/objects/Org_Routing_Config__mdt/fields/Routing_Priority__c.field-meta.xml
<CustomField>
    <fullName>Routing_Priority__c</fullName>
    <label>Routing Priority</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Lower number = higher priority. getRoute() returns the single lowest-priority-number active route. Useful when multiple routes exist for the same object and a primary must be selected.</description>
</CustomField>